# distcrawl

./: .dockerignore  .env.example  .gitignore  LICENSE  NOTICES  README.md  docker-compose.hub.yml  docker-compose.worker.yml  pyproject.toml
.github/workflows/: docker-publish.yml  e2e.yml  unit-tests.yml
analysis/: .gitignore  README.md  bot_detection.r  cookie_warnings.r  crawl_outcomes.r  crawl_progress.r  response_status_codes.r  rill.yaml  subpage_hop_agreement.r  worker_distribution.r
analysis/connectors/: duckdb.yaml
analysis/dashboards/: canvas.yaml  site_summary_metrics_explore.yaml
analysis/metrics/: crawl_progress_metrics.yaml  site_summary_metrics.yaml
analysis/models/: crawl_progress.sql  site_summary.sql  site_summary_enriched.sql
analysis/sources/: cookies.yaml  metadata.yaml  region_catalog.yaml  requests.yaml  responses.yaml  site_metadata.yaml  tranco.yaml  worker_metadata.yaml
assets/: architecture_diagram.drawio  worker_diagram.drawio
common/: README.md  pyproject.toml
common/src/dist_common/: __init__.py  config.py  models.py  types.py
common/src/dist_common/storage/: __init__.py
scripts/: Dockerfile  README.md  __init__.py  config.py  download.py  fetch_tranco.py  generate_notices.py  pyproject.toml  seed.py  status.py
tests/: README.md  conftest.py  nats_utils.py
tests/e2e/: conftest.py  docker-compose.yml  requirements.txt  seeder.py
tests/e2e/core/: test_basic_crawl.py  test_cookie_acceptance.py
tests/e2e/infra/: test_stream_auto_creation.py
tests/e2e/mock_server/: Dockerfile  app.py
tests/e2e/resilience/: test_browser_crash.py  test_dlq.py  test_nats_interruption.py  test_nats_startup.py  test_timeout.py  test_xvfb_crash.py
tests/scripts/: conftest.py  test_download.py  test_seed.py  test_shared.py  test_status.py
tests/worker/: conftest.py  test_batcher.py  test_crawler.py  test_navigator.py  test_playwright_engine.py  test_telemetry_integration.py  test_worker_integration.py
worker/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
worker/src/distcrawl/: __init__.py  config.py  main.py
worker/src/distcrawl/crawl/: __init__.py  crawler.py  errors.py  navigator.py
worker/src/distcrawl/engine/: __init__.py  consent_acceptor.py  playwright.py  protocol.py
worker/src/distcrawl/telemetry/: README.md  __init__.py  batcher.py  protocol.py  sink.py
