[project]
name = "distcrawl-root"
version = "0.1.0"
description = "Root for distcrawl workspace"
requires-python = ">=3.11"
dependencies = [
    "dist-common",
    "distcrawl",
    "dist-scripts",
]

[tool.uv.workspace]
members = ["worker", "scripts", "common"]

[tool.uv.sources]
dist-common = { workspace = true }
distcrawl = { workspace = true }
dist-scripts = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.9.0",
    "pandas>=2.0.0",
    "pyarrow",
    "pip-licenses>=5.0.0",
]
