[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distcrawl"
version = "0.5.0"
description = "A parallel web crawler with consent management using Playwright"
authors = [{name = "Henry Schwerdtner", email = "henry.schwerdtner@web.de"}, {name="Philipp Landmann", email= "phl.ldm@stud.uni-frankfurt.de"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
keywords = ["crawler", "playwright", "web-scraping", "consent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
  "faststream[nats]",
  "playwright==1.50.0",
  "pyarrow",
  "pydantic",
  "dist-common",
  "aiohttp"
]

[tool.uv.sources]
dist-common = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "pytest-asyncio>=0.23.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.scripts]
dist-crawl = "distcrawl.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/distcrawl"]
